--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chance": "^1.1.11",
     "mocha": "^10.2.0",
     "selenium-webdriver": "^4.8.2"
   }
