--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "chance": "^1.1.11",
-    "mocha": "^10.2.0",
     "selenium-webdriver": "^4.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   }
 }
